syntax = "proto3";

package order;

option go_package = "./pkg/order/pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

message Response {
  string error = 1;
  uint32 status = 2;
}

message Order {
  uint64 orderId = 1;
  uint64 productId = 2;
  uint64 quantity = 3;
  uint64 userId = 4;
}

message CreateOrderRequest { Order order = 1; }

message CreateOrderResponse {
  Response response = 1;
  Order order = 2;
}